# devhome

./: package.json  vite.config.ts
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: git_manager.rs  main.rs
src/lib/: file-manager.ts  logger.ts  project.ts  projects.ts  repository.ts  settings.ts
src/lib/fs/: file-manager.ts
src/lib/projects/: index.ts  project.ts  projects.ts  repository.ts
src/lib/utils/: logger.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/projects/: +page.svelte
src/ui/: Button.svelte
