[package]
name = "devhome"
version = "0.1.0"
description = "A Tauri App"
authors = ["Carlos Lopez<cloaction@gmail.com>"]
license = ""
repository = ""
default-run = "devhome"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "shell-all", "dialog-all", "fs-all", "path-all", "system-tray"] }
webbrowser = "0.8.12"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
git2 = "0.18.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
